--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       <div id="export" class="esri-widget--button" title="Export">
         <i class="fas fa-share-square"></i>
       </div>
+      <div id="export-2">
+        <button class="export-btn" id="json">GeoJOSN</button>
+        <button class="export-btn" id="file">FILE</button>
+        <div id="print"></div>
+      </div>
       <div class="container" id="container">
         <div class="input-box-wrapper">
           <div class="box">
@@ -48,11 +53,11 @@
           <div class="box">
             <input
               type="checkbox"
-              value="javascript"
+              value="https://services3.arcgis.com/GVgbJbqm8hXASVYi/arcgis/rest/services/Parks_and_Open_Space/FeatureServer/0"
               class="checkbox"
               id="javaScript"
             />
-            <label for="javaScript">javascript</label>
+            <label for="javaScript">park</label>
           </div>
           <div class="box">
             <input
